--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-mainClassName = "org.gradle.sample.Main"
+mainClassName = "org.aivan.ratauth.Main"
 
 //eclipse {
 //    classpath {
