--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
     jcenter()
   }
   dependencies {
-    //classpath "io.ratpack:ratpack-gradle:1.5.0-rc-2"
-    classpath "io.ratpack:ratpack-gradle:1.4.5"
+    classpath "io.ratpack:ratpack-gradle:1.5.0-rc-2"
+    //classpath "io.ratpack:ratpack-gradle:1.4.5"
     classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
   }
 }
