--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 }
 
 task integrationTest(type: Test) {
+ 	group = 'verification'
+ 	description = 'Runs all integration tests'
     testClassesDir = sourceSets.integrationTest.output.classesDir
     classpath = sourceSets.integrationTest.runtimeClasspath
     mustRunAfter test
