Add initial data insertion for integration tests

--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,10 @@ configurations {
 
 dependencies {
     compile 'org.slf4j:slf4j-simple:+'
+    compile 'org.mongodb:mongodb-driver:3.4.2'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:+'
-    //integrationTestCompile 'org.assertj:assertj-core:3.0.0'
+    integrationTestCompile 'org.mongodb:mongodb-driver:3.4.2'
 }
 
 task integrationTest(type: Test) {
